<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="com.depuisletemps.mynews.controllers.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/activity_main_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="10dp"
            app:tabMode="scrollable"
            app:tabIndicatorColor="@color/orange"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
            app:tabSelectedTextColor="@color/orange"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/activity_main_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activity_main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/black"
        android:theme="@style/AppTheme.NavigationView"
        app:itemTextColor="@color/light_gray"
        app:itemIconTint="@color/light_gray"
        app:headerLayout="@layout/activity_main_nav_drawer_header"
        app:menu="@menu/activity_main_menu_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>