<resources>
    <string name="app_name">MyNews</string>

    <!-- Categories -->
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="arts">Arts</string>
    <string name="books">Books</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="world">World</string>

    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Help screen -->
    <string name="help_speech">Please navigate across the categories to choose the list of articles you want to check.\n\n
    Click on one entry to be redirect towards the article on the NY Times webpage.\n\n
    You can also do some searches from the Search screen (touch the Search icon).\n\n
    Finally, you can set up notification from the Notifications screen.</string>

    <!-- About screen -->
    <string name="about_speech">Version : v1.0\n
        Author : Bertrand Ripoche\n
        Release date : June, the 8th, 2019\n
    </string>

    <!-- Article lists -->
    <string name="article_thumb">Image</string>

    <!-- Forms -->
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="search_query">Search query term...</string>
    <string name="notification_question">Enable notification (once per day)</string>
    <string name="form_warning_missing_info">Please select AT LEAST :\n - one query term (or more)\n - one category (or more)\n</string>
    <string name="form_warning_inversion_date">Begin date is posterior to End date</string>
    <string name="form_warning_futur_date">We don\'t know any future NYT article !</string>
    <string name="no_result_warning_message">No article found. Return to Search screen.</string>
    <string name="no_query_item_warning_message">A query term is required.</string>
    <string name="no_category_warning_message">At least one category checked</string>
    <string name="category_change_message">Category change, notification disable\nSwitch it back once criterias set</string>
    <string name="notification_created">Notification created</string>

</resources>
