...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/WhiteCheck"
            android:text="@string/sports"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/activity_form_checkbox_world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/WhiteCheck"
            android:text="@string/world"/>
    </LinearLayout>
</LinearLayout>
