<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/orange">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/activity_notif_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/search_query"/>

    <include
        layout="@layout/form_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View style="@style/Divider"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/activity_notif_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:theme="@style/Switch"
        app:trackTint="@color/switch_gray"
        android:text="@string/notification_question"/>

</LinearLayout>